--- a/posting-pro.html
+++ b/posting-pro.html
@@ -64,40 +64,59 @@
 
     <p>A website that helps employers create job postings that are skills-based and free of implicit bias so that a better match can be made between employer and candidate.</p>
 
-    <h3>Process</h3>
-    <ul>
-      <li>User research and interviews with workforce professionals and employers</li>
-      <li>Moderated design sprints and collaborative design sessions</li>
-      <li>Designed and developed UI</li>
-      <li>Prototyped solutions with InVision and tested with users</li>
-    </ul>
-
-    <div class="flex-boxes">
-      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/sketching.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/sketching.jpg" alt="White board sketching of user interface"></div>
-        <small>Sketching UI on a whiteboard</small>
-      </a>
-      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/cost-map.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/cost-map.jpg" alt="Post-it notes on a graph. X-axis represents 'Time and Effort' and Y-axis represents 'Impact'"></div>
-        <small>Potential feature cost map measuring time and effort against impact.</small>
-      </a>
-      <a class="fancybox flex-box" rel="group" href="assets/images/posting-pro/cut-paste.jpg">
-        <div class="flex-image"><img src="assets/images/posting-pro/thumbnails/cut-paste.jpg" alt="Web-based interface printed out and cut into slices. Person is re-organizing them"></div>
-        <small>Exercise improving usability with existing UI elements.</small>
+    <div class="laptopMock">
+      <a class="fancybox" rel="group" href="assets/images/posting-pro/postingpro-mock.jpg">
+        <img src="assets/images/posting-pro/postingpro-mock.jpg" alt="Screenshot Posting Pro user interface" />
       </a>
     </div>
 
-    <div class="button-wrapper">
-      <a href="" onclick="readMore()" title="Click button to read more about process" class="basic-button basic-button-outline center">Read more</a>
+    <h2>Process</h2>
+    <div class="process">
+      <h4>Subject matter and user research</h4>
+      <ul>
+        <li>Researched "skills-gap" and biases in job posting and presented learnings</li>
+        <li>Conducted interviews with 50 job seekers, workforce professionals and employers</li>
+      </ul>
+      <a class="fancybox" rel="group" href="assets/images/posting-pro/sketching.jpg">
+        <div class="imgCont"><img src="assets/images/posting-pro/thumbnails/sketching.jpg" alt="White board sketching of user interface"></div>
+      </a>
+      <div class="clearfix"></div>
     </div>
 
-    <div class="hide">
-      <p>A partner on our project, Skillful, a Markle Initiative, developed a platform to promote skills-based hiring. They found that employers were increasingly writing job postings that included education requirements higher than necessary. For instance, although the current workforce in a given position might on average have a high school diploma, an employer might ask for a Bachelor’s degree or higher. This practice eliminates a large portion of skilled and quality workers from applying. Furthermore, hiring overqualified workers can lead to turnover, lower quality work and a lack of growth opportunities.</p>
-      <p>At the beginning of our fellowship, we were asked to research implicit bias in job postings and develop ways that it might be identified and removed. In addition to education bias, we learned that reading level might also deter a qualified person from applying. For example, if a job requires a high school diploma but is written at a college level or higher, it may not be approachable to someone who is capable of completing the work. Furthermore, the average adult reading level in the U.S. is 7th/8th grade. Finally, we researched gender bias and how the language used in a job posting can attract more male or female candidates, perpetuating a lack of diversity in the workplace.</p>
-      <p>A couple days after being placed on the New Orleans team, our team began our first sprint to develop Posting Pro. The initial iteration was built upon two open-source libraries. The first flagged words based on three categories of implicit bias, and the second determined the equivalent grade reading level for a block of text. The tool would serve to identify areas of implicit bias within a job posting.</p>
-      <p>Over the next couple months we continued to refine and test the tool with hiring managers and HR representatives in New Orleans and San Francisco. Although we found that Posting Pro added value and promoted diversity, we needed to better understand the hiring process so that we could integrate the tool without adding extra work.</p>
-      <p>Halfway through the year we worked to add a “Start from Template” feature to Posting Pro. This would allow an employer to create a job posting from one that already existed for a given position. The templates were written without implicit bias and explicitly referenced skills required for the position rather than using education as a proxy. As the hiring manager edited the posting, it would be analyzed for implicit bias.</p>
-      <p>We determined that by helping an employer to create a job posting faster, we could integrate the tool into hiring process and create skills-based and inclusive job postings. We are still developing Posting Pro, you can check it out now by visiting <a href="https://posting-pro.herokuapp.com/" title="Posting Pro" target="_blank">posting-pro.herokuapp.com/</a>.</p>
+    <div class="process">
+      <h4>Synthesizing and generating ideas</h4>
+      <ul>
+        <li>Regularly shared and organized user research learnings</li>
+        <li>Moderated team design sprints and collaborative design sessions</li>
+        <li>Regularly helped develop cost analysis maps to define features</li>
+      </ul>
+      <a class="fancybox" rel="group" href="assets/images/posting-pro/cost-map.jpg">
+        <div class="imgCont"><img src="assets/images/posting-pro/thumbnails/cost-map.jpg" alt="Post-it notes on a graph. X-axis represents 'Time and Effort' and Y-axis represents 'Impact'"></div>
+      </a>
+      <div class="clearfix"></div>
+    </div>
+
+    <div class="process">
+      <h4>Prototyping, development and design</h4>
+      <ul>
+        <li>Designed and helped developed user journey and interface</li>
+        <li>Prototyped solutions and tested with users</li>
+      </ul>
+      <a class="fancybox" rel="group" href="assets/images/posting-pro/cut-paste.jpg">
+        <div class="imgCont"><img src="assets/images/posting-pro/thumbnails/cut-paste.jpg" alt="Web-based interface printed out and cut into slices. Person is re-organizing them"></div>
+      </a>
+      <div class="clearfix"></div>
+    </div>
+
+    <div class="process">
+      <h4>Refine and repeat</h4>
+      <ul>
+        <li>Applied learnings from prototypes to continued development of tool</li>
+      </ul>
+      <a class="fancybox" rel="group" href="assets/images/posting-pro/wireframe2.png">
+        <div class="imgCont"><img src="assets/images/posting-pro/thumbnails/wireframe2.png" alt="Wireframe of UI for Posting Pro" /></div>
+      </a>
+      <div class="clearfix"></div>
     </div>
 
     <div class="button-wrapper">
