--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </svg>
   <header>
     <h1>Hello, I am Stephanie Cain.</h1>
-    <h2>I am a product designer that creates user-focused civic technology.</h2>
+    <h2>I am a product designer at Clover Health. I like working on complex problems that matter.</h2>
     <div class="social-media">
       <svg id="social-header" xmlns="http://www.w3.org/2000/svg" width="190.4" height="60.58" viewBox="0 0 138.4 30.58">
         <defs>
@@ -126,16 +126,6 @@
         <img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/>
         <h3>Posting Pro</h3>
         <p>A job posting creation tool to help employers attract the right candidaties with inclusive, skills-based hiring.</p>
-      </a>
-      <a class="flex-box" href="portfolio.html" title="Portfolio">
-        <img class="square" src="assets/images/portfolio-icon.png" title="Personal Portfolio Icon" alt="Personal Portfolio Icon">
-        <h3>Personal Portfolio</h3>
-        <p>A mobile-first website that describes the process of my recent work.</p>
-      </a>
-      <a class="flex-box" href="web-request-system.html" title="Web Request System">
-        <img class="square" src="assets/images/osmre-logo.png" title="OSMRE Logo" alt="OSMRE Logo">
-        <h3>Web Request System</h3>
-        <p>Re-designed a request system used internally to track communication about web updates.</p>
       </a>
     </div>
   </section>
