--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </svg>
   <header>
     <h1>Hello, I am Stephanie Cain.</h1>
-    <h2>I am a product designer at Clover Health. I like working on complex problems that matter.</h2>
+    <h2>I am a product designer at Clover Health. I enjoy working on complex problems that have a positive social impact.</h2>
     <div class="social-media">
       <svg id="social-header" xmlns="http://www.w3.org/2000/svg" width="190.4" height="60.58" viewBox="0 0 138.4 30.58">
         <defs>
@@ -114,21 +114,6 @@
       </svg>
     </div>
   </header>
-  <section id="featuredProjects">
-    <h1>Featured Projects</h1>
-    <div class="flex-boxes">
-      <a class="flex-box" href="careerPath-NOLA.html"  title="CareerPath NOLA">
-        <img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/>
-        <h3>CareerPath NOLA</h3>
-        <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
-      </a>
-      <a class="flex-box" href="posting-pro.html" title="Posting Pro">
-        <img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/>
-        <h3>Posting Pro</h3>
-        <p>A job posting creation tool to help employers attract the right candidaties with inclusive, skills-based hiring.</p>
-      </a>
-    </div>
-  </section>
   <footer class="footer" role="contentinfo">
       <a href="https://github.com/skcain/skcain.github.io" target="_blank">View source on Github</a>
     <div class="social-media">
